--- a/About.html
+++ b/About.html
@@ -32,5 +32,8 @@
       crossorigin="anonymous"
     ></script>
   </head>
-  <body></body>
+  <body>
+    <h1>Titre test</h1>
+    <i class="icon-instagram"></i> icon-instagram
+  </body>
 </html>
