--- a/index.html
+++ b/index.html
@@ -24,5 +24,8 @@
     ></script>
     <link rel="stylesheet" href="styles.css" />
   </head>
-  <body></body>
+  <body>
+    <h1>Titre test</h1>
+    <i class="icon-instagram"></i> icon-instagram
+  </body>
 </html>
