--- a/index.html
+++ b/index.html
@@ -33,7 +33,12 @@
     ></script>
   </head>
   <body>
-    <h1>Titre test</h1>
-    <i class="icon-instagram"></i> icon-instagram
+    <h2 class="titre-1 text-center mt-5 pt-5">👋 Hi I am</h2>
+    <h1 class="nom text-center">Juliette Rose</h1>
+    <h3 class="titre-2 text-center">🇫🇷 Front-end developer, based in Düsseldorf, Germany</h3>
+    <div class="navigation-links mb-5">
+      <a href="about.html#contact" class="contact-link" title="Contact me by clicking on that button">Contact me</a>
+      <a href="about.html" class="about-link" title="Discover more about me">About me</a>
+    
   </body>
 </html>
