--- a/index.html
+++ b/index.html
@@ -37,8 +37,7 @@
     <h1 class="nom text-center">Juliette Rose</h1>
     <h3 class="titre-2 text-center">🇫🇷 Front-end developer, based in Düsseldorf, Germany</h3>
     <div class="navigation-links mb-5">
-      <a href="about.html#contact" class="contact-link" title="Contact me by clicking on that button">Contact me</a>
-      <a href="about.html" class="about-link" title="Discover more about me">About me</a>
-    
+      <a href="" class="contact-link" title="Contact me by clicking on that button">Contact me</a>
+
   </body>
 </html>
