--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap"
       rel="stylesheet"
     />
- 
+
     <link
       href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.no-icons.min.css"
       rel="stylesheet"
@@ -26,19 +26,34 @@
       integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
       crossorigin="anonymous"
     />
-       <link rel="stylesheet" href="styles.css" />
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
     ></script>
+    <link rel="stylesheet" href="Design/styles.css" />
   </head>
   <body>
-    <h2 class="titre-1 text-center mt-5 pt-5">👋 Hi I am</h2>
-    <h1 class="nom text-center">Juliette Rose</h1>
-    <h3 class="titre-2 text-center">🇫🇷 Front-end developer, based in Düsseldorf, Germany</h3>
-    <div class="navigation-links mb-5">
-      <a href="" class="contact-link" title="Contact me by clicking on that button">Contact me</a>
+    <div class="hero">
+      <h2 class="titre-1 text-center mt-5 pt-5">👋 Hi I am</h2>
+      <h1 class="nom text-center">Juliette Rose</h1>
+      <h3 class="titre-2 text-center">
+        🇫🇷 Front-end developer, based in Düsseldorf, Germany
+      </h3>
+      <div class="navigation-links mb-5">
+        <a
+          href=""
+          class="contact-link"
+          title="Contact me by clicking on that button"
+          >Contact me</a
+        >
+        <a href="about.html" class="about-link" title="Discover more about me"
+          >About me</a
+        >
+      </div>
+    </div>
 
+    <p>blabla</p>
   </body>
 </html>
