updated the hero

--- a/index.html
+++ b/index.html
@@ -19,29 +19,30 @@
       href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css"
       rel="stylesheet"
     />
-    <title>Document</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
       crossorigin="anonymous"
     />
-
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
     ></script>
+
+    <title>Document</title>
     <link rel="stylesheet" href="Design/styles.css" />
   </head>
   <body>
     <div class="hero">
-      <h2 class="titre-1 text-center mt-5 pt-5">👋 Hi I am</h2>
+      <h2 class="titre-1 text-center pt-5">👋 Hi I am</h2>
       <h1 class="nom text-center">Juliette Rose</h1>
       <h3 class="titre-2 text-center">
         🇫🇷 Front-end developer, based in Düsseldorf, Germany
       </h3>
-      <div class="navigation-links mb-5">
+
+      <div class="navigation-links mb-5 pb-5">
         <a
           href=""
           class="contact-link"
@@ -53,7 +54,5 @@
         >
       </div>
     </div>
-
-    <p>blabla</p>
   </body>
 </html>
