--- a/index.html
+++ b/index.html
@@ -52,7 +52,65 @@
         <a href="about.html" class="about-link" title="Discover more about me"
           >About me</a
         >
+      
       </div>
     </div>
+    <div class="content">
+    <div class="container mt-5">
+      <div class="row">
+        <div class="col-md-6">
+          <img src="images/yoga.png" class="img-fluid rounded d-none d-sm-block" alt="Overview of my yoga app"/>
+        </div>
+        <div class="col-md-6">
+          <h2 class="titre text-center text-md-start bg-none mb-3">Yoga App</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
+            quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
+            eos eveniet alias temporibus deserunt veritatis minima fugiat
+            explicabo eum dolore.
+          </p>
+
+         <div class="mt-5"> 
+           <a href="#" class="primary-link" title="Launch yoga app">Launch Yoga App</a>
+        </div>   </div>  
+        </div>
+      </div>
+      <div class="row mt-5">
+          <div class="col-md-6">
+            <h2 class="titre text-center text-md-start bg-none mb-3">Weather app</h2>
+            <p >
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
+              quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
+              eos eveniet alias temporibus deserunt veritatis minima fugiat
+              explicabo eum dolore.
+            </p>
+            <div class="mb-5 mt-5">
+              <a href="#" class="primary-link" title="Launch Weather app">Launch Weather App</a>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <img src="images/weather.png" class="img-fluid rounded d-none d-sm-block" alt="Overview of my weather app">
+          </div>
+        </div>
+        <div class="row mt-5">
+            <div class="col-md-6">
+              <img src="images/yogurt.png" class="img-fluid rounded d-none d-sm-block" alt="Overview of my yogurt app">
+            </div>
+            <div class="col-md-6">
+              <h2 class="titre text-center text-md-start bg-none mb-3">Yogurt app</h2>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
+                quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
+                eos eveniet alias temporibus deserunt veritatis minima fugiat
+                explicabo eum dolore.
+              </p>
+              <div class="mt-5">
+                <a href="#" class="primary-link" title="Launch yogurt app">Launch Yogurt App</a>
+              </div>
+            </div>
+          </div>
+       
+    </div>
+     </div>
   </body>
 </html>
