Updated the about page

--- a/About.html
+++ b/About.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="styles.css" />
+
     <link
       href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.no-icons.min.css"
       rel="stylesheet"
@@ -19,7 +19,6 @@
       href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css"
       rel="stylesheet"
     />
-    <title>Document</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -31,9 +30,27 @@
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
     ></script>
+
+    <title>About Page</title>
+    <link rel="stylesheet" href="Design/styles.css" />
   </head>
   <body>
-    <h1>Titre test</h1>
-    <i class="icon-instagram"></i> icon-instagram
+    <h1 class="text-center pt-5 pb-5">About me</h1>
+    <div class="about-hero container">
+      <div class="row">
+        <div class="col-6">
+          <img src="images/me.jpg" alt="" class="me img-fluid" />
+        </div>
+
+        <div class="col-6">
+          <h2 class="titre-1 pb-2">Juliette Rose</h2>
+
+          <p class="titre-2">
+            Marketing Project Manager from France, living in Germany. </br> Passionate
+            about coding.
+          </p>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
