--- a/About.html
+++ b/About.html
@@ -31,7 +31,7 @@
       crossorigin="anonymous"
     ></script>
 
-    <title>About Page</title>
+    <title>About </title>
     <link rel="stylesheet" href="Design/styles.css" />
   </head>
   <body>
