--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       crossorigin="anonymous"
     ></script>
 
-    <title>Document</title>
+    <title>Juliette Rose</title>
     <link rel="stylesheet" href="Design/styles.css" />
   </head>
   <body>
