--- a/Contact.html
+++ b/Contact.html
@@ -39,6 +39,34 @@
     <link rel="stylesheet" href="Design/styles.css" />
   </head>
   <body>
+    <div class="container">
+      <nav class="d-flex justify-content-between">
+        <a class="website-title">
+          <img
+            src="images/logo.png"
+            width="50"
+            height="50"
+            class="logo d-inline-block align-middle"
+            alt=""
+          />
+          Juliette Rose
+        </a>
+
+        <ul>
+          <li class="active">
+            <a href="index.html"> Home</a>
+          </li>
+          <li>
+            <a href="about.html"> About</a>
+          </li>
+          <li>
+            <a href="work.html"> Work</a>
+          </li>
+          <li>
+            <a href="contact.html"> Contact</a>
+          </li>
+        </ul>
+      </nav>
     <h1 class="text-center pt-5 pb-5">Contact</h1>
 
     <div class="container  pt-3">
