--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
       href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap"
       rel="stylesheet"
     />
-
     <link
       href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.no-icons.min.css"
       rel="stylesheet"
@@ -19,6 +18,8 @@
       href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css"
       rel="stylesheet"
     />
+    <title>Juliette Rose - My coding portfolio</title>
+
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -30,21 +31,46 @@
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
     ></script>
-
-    <title>Juliette Rose</title>
     <link rel="stylesheet" href="Design/styles.css" />
   </head>
   <body>
-    <div class="hero">
-      <h2 class="titre-1 text-center pt-5">👋 Hi I am</h2>
+    <div class="container">
+      <nav class="d-flex justify-content-between">
+        <a class="website-title">
+          <img
+            src="images/logo.png"
+            width="50"
+            height="50"
+            class="logo d-inline-block align-middle"
+            alt=""
+          />
+          Juliette Rose
+        </a>
+
+        <ul>
+          <li class="active">
+            <a href="index.html"> Home</a>
+          </li>
+          <li>
+            <a href="about.html"> About</a>
+          </li>
+          <li>
+            <a href="work.html"> Work</a>
+          </li>
+          <li>
+            <a href="contact.html"> Contact</a>
+          </li>
+        </ul>
+      </nav>
+
+      <h2 class="titre-1 text-center mt-5 pt-5">👋 Hi I am</h2>
       <h1 class="nom text-center">Juliette Rose</h1>
       <h3 class="titre-2 text-center">
         🇫🇷 Front-end developer, based in Düsseldorf, Germany
       </h3>
-
-      <div class="navigation-links mb-5 pb-5">
+      <div class="navigation-links mb-5">
         <a
-          href=""
+          href="about.html#contact"
           class="contact-link"
           title="Contact me by clicking on that button"
           >Contact me</a
@@ -52,65 +78,86 @@
         <a href="about.html" class="about-link" title="Discover more about me"
           >About me</a
         >
-      
       </div>
-    </div>
-    <div class="content">
-    <div class="container mt-5">
-      <div class="row">
-        <div class="col-md-6">
-          <img src="images/yoga.png" class="img-fluid rounded d-none d-sm-block" alt="Overview of my yoga app"/>
+
+      <div class="container mt-5">
+        <div class="row">
+          <div class="col-md-6">
+            <img
+              src="images/yoga.png"
+              class="img-fluid rounded d-none d-sm-block"
+              alt="Overview of my yoga app"
+            />
+          </div>
+          <div class="col-md-6">
+            <h2 class="titre text-center text-md-start bg-none mb-3">
+              Yoga App
+            </h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Perferendis quia, dignissimos nam ratione veniam quibusdam porro
+              omnis quam vel eos eveniet alias temporibus deserunt veritatis
+              minima fugiat explicabo eum dolore.
+            </p>
+
+            <div class="mt-5">
+              <a href="#" class="primary-link" title="Launch yoga app"
+                >Launch Yoga App</a
+              >
+            </div>
+          </div>
         </div>
+      </div>
+      <div class="row mt-5">
         <div class="col-md-6">
-          <h2 class="titre text-center text-md-start bg-none mb-3">Yoga App</h2>
+          <h2 class="titre text-center text-md-start bg-none mb-3">
+            Weather app
+          </h2>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
             quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
             eos eveniet alias temporibus deserunt veritatis minima fugiat
             explicabo eum dolore.
           </p>
-
-         <div class="mt-5"> 
-           <a href="#" class="primary-link" title="Launch yoga app">Launch Yoga App</a>
-        </div>   </div>  
+          <div class="mb-5 mt-5">
+            <a href="#" class="primary-link" title="Launch Weather app"
+              >Launch Weather App</a
+            >
+          </div>
+        </div>
+        <div class="col-md-6">
+          <img
+            src="images/weather.png"
+            class="img-fluid rounded d-none d-sm-block"
+            alt="Overview of my weather app"
+          />
         </div>
       </div>
       <div class="row mt-5">
-          <div class="col-md-6">
-            <h2 class="titre text-center text-md-start bg-none mb-3">Weather app</h2>
-            <p >
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
-              quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
-              eos eveniet alias temporibus deserunt veritatis minima fugiat
-              explicabo eum dolore.
-            </p>
-            <div class="mb-5 mt-5">
-              <a href="#" class="primary-link" title="Launch Weather app">Launch Weather App</a>
-            </div>
-          </div>
-          <div class="col-md-6">
-            <img src="images/weather.png" class="img-fluid rounded d-none d-sm-block" alt="Overview of my weather app">
+        <div class="col-md-6">
+          <img
+            src="images/yogurt.png"
+            class="img-fluid rounded d-none d-sm-block"
+            alt="Overview of my yogurt app"
+          />
+        </div>
+        <div class="col-md-6">
+          <h2 class="titre text-center text-md-start bg-none mb-3">
+            Yogurt app
+          </h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
+            quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
+            eos eveniet alias temporibus deserunt veritatis minima fugiat
+            explicabo eum dolore.
+          </p>
+          <div class="mt-5">
+            <a href="#" class="primary-link" title="Launch yogurt app"
+              >Launch Yogurt App</a
+            >
           </div>
         </div>
-        <div class="row mt-5">
-            <div class="col-md-6">
-              <img src="images/yogurt.png" class="img-fluid rounded d-none d-sm-block" alt="Overview of my yogurt app">
-            </div>
-            <div class="col-md-6">
-              <h2 class="titre text-center text-md-start bg-none mb-3">Yogurt app</h2>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
-                quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
-                eos eveniet alias temporibus deserunt veritatis minima fugiat
-                explicabo eum dolore.
-              </p>
-              <div class="mt-5">
-                <a href="#" class="primary-link" title="Launch yogurt app">Launch Yogurt App</a>
-              </div>
-            </div>
-          </div>
-       
+      </div>
     </div>
-     </div>
   </body>
 </html>
